--- a/jvm1.8/pom.xml
+++ b/jvm1.8/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
